--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ header{
     background-color: #1F2937;
     color: white;
 }
+.flex-header-one{
+    display:flex;
+}
 ul{
     list-style: none;
+    display: flex;
 }
