--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
 }
+/*HEADER SECTION*/
 header{
     background-color: #1F2937;
     color: white;
@@ -9,7 +10,15 @@ header{
 .flex-header-one{
     display:flex;
 }
+.header-logo{
+    font-size: 24px;
+    color: #F9FAF8;
+
+}
 ul{
     list-style: none;
     display: flex;
+}
+.right-links{
+    margin-left: auto;
 }
