--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,13 @@ header{
 }
 .flex-header-one{
     display:flex;
+    padding-top: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+}
+.flex-header-two{
+    padding: 40px;
 }
 .header-logo{
     font-size: 24px;
