--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,13 @@ h1{
     font-size: 18px;
     color: #E5E7EB;
 }
+button{
+    background-color: #3882F6;
+    color: white;
+    padding: 5px 20px;
+    margin-top: 10px;
+    margin-left: 5px;
+    border-style: none;   
+    border-radius: 5px;
+    font-weight: 600;
+}
