--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ header{
 .flex-header-two{
     padding: 100px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 .header-logo{
@@ -56,5 +57,12 @@ button{
     font-weight: 600;
 }
 .flex-header-two img{
-    width: 250px;
+    width: 450px;
+}
+
+/*MAIN SECTION*/
+.flex-main p{
+    font-size: 33px;
+    font-weight: bolder;
+    color: #1F2937 
 }
