--- a/styles.css
+++ b/styles.css
@@ -69,15 +69,20 @@ button{
     color: #1F2937 
 }
 .rose-images{
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 img{
-    width: 200px;
+    width: 250px;
+    height: 150px;
 }
 .rose-images p{
     font-size: 18px;
     text-align: center;
-    padding: 0;
-    font-weight: 100px;
+}
+.rose-one , .rose-two, .rose-three, .rose-four{
+  flex:1;
+  padding: 30px;
+  margin: 3px;
 }
