--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ ul{
     font-size: 18px;
     color: #E5E7EB;
 }
-button{
+ .flex-header-two button{
     background-color: #3882F6;
     color: white;
     padding: 5px 20px;
@@ -101,3 +101,5 @@ button{
     text-align: right;
     font-weight: 600;
 }
+
+/*MAIN SECTION: BOTTOM*/
