Added a design to footer

--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,10 @@ ul{
     color: white;
     border-radius: 5px;
 }
+/*FOOTER*/
+.flex-footer{
+    background-color: #1F2937;
+    color: white;
+    text-align: center;
+    margin-top: auto;
+}
