--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ header{
 }
 .flex-header-one{
     display:flex;
-    padding-top: 15px;
+    padding-top: 5px;
     padding-left: 100px;
     padding-right: 100px;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
 }
 .flex-header-two{
     padding: 50px 100px;
@@ -20,15 +20,13 @@ header{
     align-items: center;
     justify-content: space-between;
 }
-.header-logo{
-    font-size: 24px;
-    color: #F9FAF8;
-    font-weight: 600;
-
+.header-logo img{
+  width: 150px;
 }
 ul{
     list-style: none;
     display: flex;
+    
 }
 .right-links{
     margin-left: auto;
