Added a semi-colon

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ ul{
     text-align: center;
     font-weight: bolder;
     padding: 20px;
-    color: #1F2937 
+    color: #1F2937;
 }
 .rose-images{
     display:flex;
