--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 header{
     background-color: #1F2937;
     color: white;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 .flex-header-one{
     display:flex;
@@ -43,6 +44,7 @@ ul{
 .secondary-text{
     font-size: 18px;
     color: #E5E7EB;
+    font-weight: 300;
 }
  .flex-header-two button{
     background-color: #3882F6;
@@ -59,6 +61,9 @@ ul{
 }
 
 /*MAIN SECTION*/
+main{
+    font-family: 'Roboto Condensed', sans-serif;
+}
 .header-main{
     font-size: 33px;
     text-align: center;
@@ -90,6 +95,8 @@ ul{
 .flex-quotes{
     background-color: #E5E7EB;
     padding: 50px 120px;
+    font-style: light italic;
+    font-weight: 300;
 }
 .flex-quotes p{
     font-size: 36px;
@@ -123,6 +130,7 @@ ul{
 }
 /*FOOTER*/
 .flex-footer{
+    font-family: 'Roboto Condensed', sans-serif;
     background-color: #1F2937;
     color: white;
     text-align: center;
