--- a/styles.css
+++ b/styles.css
@@ -1,115 +1,137 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 }
+
 /*HEADER SECTION*/
-header{
+header {
     background-color: #1F2937;
     color: white;
     font-family: 'Roboto Condensed', sans-serif;
 }
-.flex-header-one{
-    display:flex;
+
+.flex-header-one {
+    display: flex;
     padding-top: 5px;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 10px;
 }
-.flex-header-two{
+
+.flex-header-two {
     padding: 50px 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.header-logo img{
-  width: 150px;
+
+.header-logo img {
+    width: 150px;
 }
-ul{
+
+ul {
     list-style: none;
     display: flex;
-    
+
 }
-.right-links{
+
+.right-links {
     margin-left: auto;
     gap: 15px;
     font-size: 18px;
-    color:  #E5E7EB;
+    color: #E5E7EB;
     align-items: center;
 }
-.flex-header-two h1{
+
+.flex-header-two h1 {
+    margin-bottom: 2px;
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8
 }
-.secondary-text{
+
+.secondary-text {
     font-size: 18px;
     color: #E5E7EB;
     font-weight: 300;
 }
- .flex-header-two button{
+
+.flex-header-two button {
     background-color: #3882F6;
     color: white;
     padding: 5px 20px;
     margin-top: 10px;
     margin-left: 5px;
-    border-style: none;   
+    border-style: none;
     border-radius: 5px;
     font-weight: 600;
 }
-.flex-header-two img{
+
+.flex-header-two img {
     width: 450px;
 }
 
 /*MAIN SECTION*/
-main{
+main {
     font-family: 'Roboto Condensed', sans-serif;
 }
-.header-main{
+
+.header-main {
     font-size: 33px;
     text-align: center;
     font-weight: bolder;
     padding: 20px;
     color: #1F2937;
 }
-.rose-images{
-    display:flex;
+
+.rose-images {
+    display: flex;
     flex-wrap: wrap;
 }
-.rose-images img{
+
+.rose-images img {
     width: 250px;
     height: 150px;
     border-radius: 25px;
 }
-.rose-images p{
+
+.rose-images p {
     font-size: 18px;
     text-align: center;
 }
-.rose-one , .rose-two, .rose-three, .rose-four{
-  flex:1;
-  padding: 30px;
-  margin: 3px;
-  width: 250px;
-  height: 300px;
+
+.rose-one,
+.rose-two,
+.rose-three,
+.rose-four {
+    flex: 1;
+    padding: 30px;
+    margin: 3px;
+    width: 250px;
+    height: 300px;
 }
+
 /*MAIN SECTION: QUOTES*/
-.flex-quotes{
+.flex-quotes {
     background-color: #E5E7EB;
     padding: 50px 120px;
     font-style: light italic;
     font-weight: 300;
 }
-.flex-quotes p{
+
+.flex-quotes p {
     font-size: 36px;
     text-align: justify;
 }
-.author p{
+
+.author p {
     font-size: 18px;
     text-align: right;
     font-weight: 600;
 }
 
 /*MAIN SECTION: BOTTOM*/
-.bottom{
+.bottom {
     width: 700px;
     display: flex;
     background-color: #3882F6;
@@ -120,7 +142,8 @@ main{
     margin-left: auto;
     margin-right: auto;
 }
-.bottom button{
+
+.bottom button {
     margin-left: auto;
     padding: 5px 20px;
     background-color: #3882F6;
@@ -128,8 +151,9 @@ main{
     color: white;
     border-radius: 5px;
 }
+
 /*FOOTER*/
-.flex-footer{
+.flex-footer {
     font-family: 'Roboto Condensed', sans-serif;
     background-color: #1F2937;
     color: white;
