--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ ul {
 }
 
 .flex-header-two h1 {
-    margin-bottom: 2px;
+    padding-bottom: 10px;
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8
@@ -54,6 +54,7 @@ ul {
     font-size: 18px;
     color: #E5E7EB;
     font-weight: 300;
+    line-height: 1.5;
 }
 
 .flex-header-two button {
